osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_count_regex_matches/test_rejects_invalid_regex.txt
error: invalid regex pattern '(': missing ), unterminated subpattern at position 0
--> main.sml:1:33
     |
   1 | Foo = CountRegexMatches(patterns=["valid", "("], target="")
     |                                  ^